recursion.cons.length.Length.scala.error
Compilation error:
Length:3: error: '(' expected but identifier found.
  if l.head == 0
     ^